Removes tag from container specs in application-manifest.yaml.

--- a/application-manifest.yaml
+++ b/application-manifest.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: flask-orders-app-container
-        image: koko660/flask-orders-app:v1.0
+        image: koko660/flask-orders-app
         ports:
         - containerPort: 5000
   strategy: 
